--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.19.0",
     "cloudinary": "^1.27.1",
     "datauri": "^4.1.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.7.2",
@@ -19,7 +20,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon App.js"
+    "start": "nodemon -r dotenv/config App.js"
   },
   "author": "",
   "license": "ISC",
