--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^10.0.27",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.6",
+    "@rebass/preset": "^4.0.5",
     "axios": "^0.21.1",
+    "emotion-theming": "^11.0.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-image": "^1.5.1",
@@ -15,6 +19,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.1",
+    "rebass": "^4.0.7",
     "redux": "^4.1.2"
   },
   "scripts": {
