--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.6",
+    "@mui/lab": "^5.0.0-alpha.58",
     "@mui/material": "^5.1.0",
     "axios": "^0.21.1",
     "react": "^17.0.2",
