--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.7.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "multer": "^1.4.3"
   },
