--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   "scripts": {
     "frontend": "cd Frontend && npm run start",
     "backend": "cd Backend && npm run start",
-    "heroku-postbuild": "cd Frontend && npm install && npm run build"
+    "heroku-postbuild": "cd Frontend && npm install && npm run build && cd ../Backend && npm install && npm run build"
   }
 }
