--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "frontend": "cd Frontend && npm run start",
     "backend": "cd Backend && npm run start",
-    "heroku-postbuild": "cd Frontend && npm install && npm run build && cd ../Backend && npm install && npm run build"
+    "heroku-postbuild": "cd Backend && npm install && npm run build && cd ../Frontend && npm install && npm run build"
   },
   "engines": {
     "node": "15.8.0"
