--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "auto_moto_luxury",
   "version": "0.9.0",
   "engines": {
-    "node": "15.8.0"
+    "node": "15.8.0",
+    "npm": "7.5.2"
   },
   "scripts": {
     "frontend": "cd Frontend && npm run start",
     "backend": "cd Backend && npm run start",
-    "heroku-prebuild": "cd Backend && npm install && npm run build && cd ../Frontend && npm install && npm run build"
+    "heroku-postbuild": "cd Backend && npm install && npm run build && cd ../Frontend && npm install && npm run build"
   }
 }
